# scadup

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  azure-pipelines.yml  build.sh  clean.sh  readme.md
.github/workflows/: cmake-multi-platform.yml
doc/: readme.md
src/: CMakeLists.txt
src/Scadup/: CMakeLists.txt  Scadup.cc  Scadup.h
src/Utils/: FileUtils.cpp  FileUtils.h  MsgQue.c  MsgQue.h  logging.h
src/common/: Scadup.h  common.h
src/kaics/: CMakeLists.txt  KaiSocket.cc  scadop.cc  scadop.h
src/scadup/: Broker.cpp  Broker.h  CMakeLists.txt  Publisher.cpp  Publisher.h  Scadup.cc  Scadup.h  Subscriber.cpp  Subscriber.h
src/utils/: FileUtils.cpp  FileUtils.h  TaskBase.h  logging.h  msg_que.c  msg_que.h  threadpool.cpp  threadpool.h  threadpool.hpp
test/: CMakeLists.txt  scadup.cfg  test.cpp
